# MLIR-demo

./: README.md
ast_analysis/: CMakeLists.txt
ast_analysis/src/: ASTAnalysis.cpp  ASTAnalysis.h  main.cpp
loop_opt/: cmds.txt  loop_fusion.mlir  loop_invariant.mlir  loop_tiling.mlir  loop_unrolling.mlir
pipeline/: badcode.mlir  cmds.txt
toy_edited/Ch6/include/toy/: Ops.td
toy_edited/Ch6/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  MLIRGen.cpp  ToyCombine.cpp
